link para google play

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <h2 class="section-heading">Comece aqui a contribuir para um setor mais transparente</h2> 
                         <p>O aplicativo está disponível nas versões Android e IOS</p> 
                         <div class="badges"> 
-                            <a class="badge-link" href="#"><img src="img/icones/disponivel-google-play-badge.png" alt=""></a> 
+                            <a class="badge-link" href="https://play.google.com/store/apps/details?id=br.mapping.app"><img src="img/icones/disponivel-google-play-badge.png" alt=""></a> 
                             <a class="badge-link" href="#"><img src="img/icones/appstore_breve.png" alt=""></a> 
                         </div>                         
                     </div>                     
