fixes - still need to work on the video tho

--- a/faq.html
+++ b/faq.html
@@ -91,7 +91,7 @@
 								</main>
 								<main>
   									<details>
-											<summary> Qual é a meta do DO PASTO AO PRATO?</summary>
+											<summary> Como funciona o aplicativo?</summary>
 										<div class="faq__content">
 											<p>
 											O aplicativo DO PASTO AO PRATO é uma ferramenta de transparência e um projeto de ciência cidadã.<br> 
@@ -130,7 +130,7 @@
 										<div class="faq__content">
 											<p>
 												O aplicativo pode ser obtido para <br>
-												<li>Android no link [] </li>
+												<li>Android no link [https://play.google.com/store/apps/details?id=br.mapping.app] </li>
 												<li>Ou em breve na Apple Store no link [].</li>
 											</p>
 										</div>
