--- a/faq.html
+++ b/faq.html
@@ -130,7 +130,7 @@
 										<div class="faq__content">
 											<p>
 												O aplicativo pode ser obtido para <br>
-												<li>Android no link [https://play.google.com/store/apps/details?id=br.mapping.app] </li>
+												<li>Android no <a href="https://play.google.com/store/apps/details?id=br.mapping.app">link</a> </li>
 												<li>Ou em breve na Apple Store no link [].</li>
 											</p>
 										</div>
