--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a class="page-scroll" href="#download">Download</a>
+              <a class="page-scroll" href="https://play.google.com/store/apps/details?id=br.mapping.app">Download</a>
             </li>
             <li>
               <a class="page-scroll" href="#features">O aplicativo</a>
