FAQ sessão dos indicadores agora melhor desenhada

--- a/faq.html
+++ b/faq.html
@@ -191,11 +191,12 @@
 											<summary>Quais indicadores estão incluídos?</summary>
 									<div class="faq__content">
 										<p>
-											O número de multas pagas pelo frigorífico de onde se origina a carne, aplicadas em razão do desrespeito às normas de higiene e/ou bem-estar animal durante o processamento armazenamento e/ou o abate; 
+											<li>O número de multas pagas pelo frigorífico de onde se origina a carne, aplicadas em razão do desrespeito às normas de higiene e/ou bem-estar animal durante o processamento armazenamento e/ou o abate;</li> 
 											<li>A área desmatada na zona de compra (onde eles fornecem gado) dos frigoríficos;</li>
 											<li>A área queimada na zona de compra dos frigoríficos;</li>
 											<li>A ocorrência de trabalho análogo à escravidão na cadeia direta ou indireta dos frigoríficos.</li>
-											<li>Estes indicadores estão descritos abaixo e no manual metodológico do aplicativo, disponível aqui.</li>
+											<br>
+											Estes indicadores estão descritos abaixo e no manual metodológico do aplicativo, disponível <a href="http://resources.trase.earth/documents/metodo_do_pasto_ao_prato.pdf">aqui</a>.
 										</p>
 									</div>
 									</details>
