--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Do pasto ao prato &mdash; based on Greatnesss FreeHTML5.co</title>
+	<title>Do pasto ao prato &mdash; juntos, aumentando a transparência da cadeia da carne no Brasil</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Do pasto ao prato website" />
 	<meta name="keywords" content="consumo, sustentavel, aplicativo, supermercados, comida, carne, pecuaria, brasil" />
