--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=DM+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -131,7 +131,7 @@
 						<div class="col-xs-2 text-left menu-1">
 							<h2>Impacto ambiental</h2>
 							<p>A pecuária é a principal causa do desmatamento no Brasil, e este indicador mostra a área de desmatamento na zona de compras do frigorífico.</p> 
-						</div>>	
+						</div>
 				    </div>	
 					<img src="images/Line 92.svg" width="520" height="" />
 					<div class="row">
@@ -141,7 +141,7 @@
 						<div class="col-xs-2 text-left menu-1">
 							<h2>Trabalho escravo</h2>
 							<p>Este indicador reflete o número de fazendas autuadas por condições de trabalho análogas à escravidão que fornecem ao frigorífico.</p> 
-						</div>>	
+						</div>	
 				    </div>
 					<img src="images/Line 92.svg" width="520" height="" />
 					<div class="row">
