--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 	<div id="gtco-features">
 		<div class="gtco-container-4">
 			<div class="col-md-7">
-				<iframe width= "520" height="295" src="https://www.youtube.com/embed/ZdFWPtM5itc" style="margin-top: 0px"></iframe>
+				<iframe width="560" height="295" src="https://www.youtube.com/embed/UPwjH70z-go" title="Do Pasto ao Prato" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<!-- <iframe width= "520" height="295" src="https://www.youtube.com/embed/ZdFWPtM5itc" style="margin-top: 0px"></iframe> -->
 				</div>
 			</div>
 			<div class="col-md-4" style="margin-bottom: 100px;" >
@@ -202,9 +203,9 @@
 				<img src="images/img-banco.svg" width="420" height="515" />
 				</div>
 			</div>
-			<div class="col-md-4" style="margin-top: 80px" >
-				<h3>EM BREVE</h3>
-				<h2>Um banco de dados inédito, conectando frigoríficos aos mercados varejistas</h2>
+			<div class="col-md-4" style="margin-top: 60px" >
+				<h3>EM BREVE</h3> 
+				<h2>Um banco de dados inédito, conectando frigoríficos aos mercados varejistas</h2> <br><br>
 				<p>Dispondo de mais informações, setores privados, públicos e da sociedade civil poderão desenhar ações e intervenções mais efetivas. Construiremos juntos uma cadeia de alimentos mais ética e sustentável.</p>
 			</div>
 		</div>
