--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						</div>
 					</div>
 					<br>
-					<a href="metodo.html"> Clique aqui para mais detalhes sobre o método </a>
+					<a href="https://resources.trase.earth/documents/metodo_do_pasto_ao_prato.pdf"> Clique aqui para mais detalhes sobre o método </a>
 				</div>
 				<div class="col-md-4">
 					<img src="images/imgindicadores.svg" width="700" height="615" />
